JPN: linting + docs
