# docs/swagger.json
@@ -99,6 +99,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "Ping"
+                ],
                 "summary": "Ping the server",
                 "operationId": "get-ping",
                 "responses": {
@@ -117,7 +120,7 @@
                     "type": "integer"
                 },
                 "card_number_last_four": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "currency": {
                     "type": "string"
